# water_http

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
Benchmarks/race/: bench.js  package-lock.json  package.json
Benchmarks/wrk/: README.md
benchmarks/autocannon/: README.md
benchmarks/race/: README.md  latency_results.txt
benchmarks/wrk/: README.md
examples/: cross_middlewares.rs  cross_redirect.rs  default.rs  html_render.rs  middleware.rs  path_params.rs  public_files_serving.rs  redirect.rs  sending_files.rs  uploading_files.rs
pms/: Cargo.toml
pms/src/: lib.rs
pms/src/functions_builder/: mod.rs
public/tests/: aapanel.txt
public/uploads/: aapanel.txt
src/: alt.rs  lib.rs  main.rs
src/builders/: mod.rs
src/configurations/: mod.rs
src/framework_http/: mod.rs
src/framework_http/chose_encoding_algorithm/: mod.rs
src/framework_http/request/: mod.rs  multipart_form.rs  x_www_form_urlencoded.rs
src/framework_http/response/: getters.rs  mod.rs  senders.rs
src/framework_http/server_runner/: mod.rs
src/framework_http/server_structure/: mod.rs
src/framework_http/tls/: mod.rs
src/framework_http/util/: mod.rs
src/http/: mod.rs
src/http/request/: getter.rs  mod.rs
src/http/request/body/: bytes_puller.rs  chunked.rs  mod.rs  multer.rs  multipartformdata.rs  xwwwformurlencoded.rs
src/http/request/body/stream_holders/: mod.rs
src/http/request/header/: mod.rs
src/http/response/: file_response.rs  mod.rs  sender.rs  writer.rs
src/http/status_code/: mod.rs
src/server/: configurations.rs  mod.rs
src/server/capsule/: capsule_macros.rs  mod.rs
src/server/connection/: mod.rs
src/server/encoding/: mod.rs
src/server/errors/: mod.rs  server_errors.rs
src/server/sr_context/: mod.rs
src/server/tls/: mod.rs
src/structure/: context_route_function_finder.rs  mod.rs
src/util/: mod.rs
templates/: base.html
templates/layouts/main/: main_structure.html
templates/layouts/main/navbar/: profile.html
templates/layouts/main/sidebar/: sidebar.html
