[package]
name = "water_http"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = "1.7.2"
h2 = "0.4.6"
http = "1.1.0"
httparse = "1.9.5"
rustls = "0.23.13"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = {version = "0.1.40",optional = true}
tracing-subscriber = {version = "0.3.18",optional = true}
twoway = "0.2.2"


[features]
default = []
debugging = ["tracing","tracing-subscriber"]
count_connection_parsing_speed = ["tracing","tracing-subscriber"]

