[package]
name = "water_http"
version = "3.0.1"
edition = "2021"
authors = ["Hassan Sharara <hassansharara12@gmail.com>"]
repository = "https://github.com/HassanSharara/water_http"
homepage = "https://github.com/HassanSharara"
license = "MIT"
description = "fast web http framework that support http 1 and http 2 with very easy use"
categories = ["network-programming", "web-programming::http-server" ]
keywords = ["http", "water_http", "water-http","water-server"]
readme = "README.md"



[dependencies]
brotli = "7.0.0"
byteorder = "1.5.0"
bytes = "1.7.2"
bzip2 = "0.5.0"
flate2 = "1.0.35"
h2 = "0.4.6"
http = "1.1.0"
httparse = "1.9.5"
lz4 = "1.28.0"
rustls = "0.23.13"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snap = "1.1.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = {version = "0.1.40",optional = true}
tracing-subscriber = {version = "0.3.18",optional = true,features = ["env-filter"]}
twoway = "0.2.2"
zstd = "0.13.2"
water_http_utils = { version = "0.1.0", features = ["server"]}
#path = "P:\\projects\\rust\\packages\\water_http_utils"



[features]
debugging = ["tracing","tracing-subscriber"]
count_connection_parsing_speed = ["tracing","tracing-subscriber"]
write_logs = ["water_http_utils/write_logs"]

[dev-dependencies]
askama = "0.14.0"

